--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,15 +3,17 @@ on:
   pull_request:
   push:
 jobs:
-  testss:
+  tests:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
-        fetch-depth: 0
+          # Nix Flakes doesn't work on shallow clones
+          fetch-depth: 0
     - uses: cachix/install-nix-action@v11
       with:
         install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-3.0pre20200820_4d77513/install
+        nix_path: nixpkgs=channel:nixos-unstable
         extra_nix_config: |
           experimental-features = nix-command flakes
     - run: nix-build
