Swap volume up and volume down

--- a/config/sway/config
+++ b/config/sway/config
@@ -158,8 +158,8 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 # Brightness
-bindsym XF86MonBrightnessDown exec "light -A 10"
-bindsym XF86MonBrightnessUp exec "light -U 10"
+bindsym XF86MonBrightnessUp exec "light -A 10"
+bindsym XF86MonBrightnessDown exec "light -U 10"
 
 # Volume
 bindsym XF86AudioRaiseVolume exec 'pactl set-sink-volume @DEFAULT_SINK@ +5%'
