Fix overlapping keybind

--- a/config/sway/config
+++ b/config/sway/config
@@ -142,7 +142,7 @@ bindsym $mod+f fullscreen
 bindsym $mod+Shift+space floating toggle
 
 # Swap focus between the tiling area and the floating area
-bindsym $mod+space focus mode_toggle
+bindsym $mod+tab focus mode_toggle
 
 # Move focus to the parent container
 bindsym $mod+a focus parent
