--- a/config/ncmpcpp/config
+++ b/config/ncmpcpp/config
@@ -2,23 +2,8 @@ ncmpcpp_directory = ~/.config/ncmpcpp
 mpd_host = localhost
 mpd_port = 6600
 mpd_crossfade_time = 2
-# visualizer_fifo_path = /tmp/mpd.fifo
-# visualizer_output_name = "Visualizer feed"
-# visualizer_in_stereo = no
-#visualizer_sample_multiplier = 1
-# visualizer_sync_interval = 30
-# visualizer_type = spectrum
-# visualizer_look = ●┃
-# visualizer_color = cyan, green, yellow, magenta, red
-#visualizer_color = 41, 83, 119, 155, 185, 215, 209, 203, 197, 161
-#system_encoding = ""
-#playlist_disable_highlight_delay = 5
-#message_delay_time = 5
-song_list_format = "                               {{%a - %t}|{%f}}{$R%l}"
-#song_status_format = {%a - %t}|{%f}
-#song_status_format = "{{%a{ "%b"{ (%y)}} - }{%t$/b}}|{$b%f$/b}"
+song_list_format = "{{%a - %t}|{%f}}{$R%l}"
 song_status_format = "{{%a{ $2//$9 %b{, %y}} $2//$9 }{%t$/b}}|{$b%f$/b}"
-#song_library_format = {{{%t} - %a{ "%b"{ (%y)}}}}|{%f}
 song_library_format = {{%a - %t} (%b)}|{%f}
 #alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
 #alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
@@ -46,7 +31,7 @@ playlist_display_mode = classic
 #volume_change_step = 2
 autocenter_mode = yes
 #centered_cursor = no
-progressbar_look = "─╼ "
+progressbar_look = "──"
 #progressbar_boldness = yes
 #default_place_to_search_in = database
 #user_interface = classic
@@ -68,12 +53,12 @@ follow_now_playing_lyrics = no
 #lastfm_preferred_language = en
 #show_hidden_files_in_local_browser = no
 #screen_switcher_mode = playlist, browser
-#startup_screen = playlist
+startup_screen = playlist
 #startup_slave_screen = ""
 #startup_slave_screen_focus = no
 #locked_screen_width_part = 50
 #ask_for_locked_screen_width_part = yes
-#jump_to_now_playing_song_at_start = yes
+jump_to_now_playing_song_at_start = yes
 #ask_before_clearing_playlists = yes
 #clock_display_seconds = no
 #display_volume_level = yes
@@ -102,7 +87,6 @@ progressbar_color = black
 progressbar_elapsed_color = red
 statusbar_color = default
 alternative_ui_separator_color = magenta
-# active_column_color = red
 window_border_color = yellow
 
 ## you have dunst? use this 
