--- a/.github/workflows/configs.yml
+++ b/.github/workflows/configs.yml
@@ -4,6 +4,24 @@ on:
   schedule:
     - cron:  '0 12 * * *'
 jobs:
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        # Nix Flakes doesn't work on shallow clones
+        fetch-depth: 0
+    - uses: cachix/install-nix-action@v11
+      with:
+        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20201221_9fab14a/install
+        # Configure Nix to enable flakes
+        extra_nix_config: |
+          experimental-features = nix-command flakes
+    # Run the general flake checks
+    - run: nix flake check
+    # Verify that the main program builds
+    - run: nix shell -c echo OK
+
   system:
     strategy:
       fail-fast: false
@@ -16,7 +34,7 @@ jobs:
         submodules: recursive
         fetch-depth: 0
     - name: Install nix
-      uses: cachix/install-nix-action@v12
+      uses: cachix/install-nix-action@v11
       with:
         install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20201221_9fab14a/install        extra_nix_config: |
           experimental-features = nix-command flakes
