--- a/.github/workflows/configs.yml
+++ b/.github/workflows/configs.yml
@@ -18,7 +18,8 @@ jobs:
     - name: Install nix
       uses: cachix/install-nix-action@v11
       with:
-        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20201221_9fab14a/install        extra_nix_config: |
+        install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20201221_9fab14a/install
+        extra_nix_config: |
           experimental-features = nix-command flakes
     - name: Build system config
       run: nix build .#nixosConfigurations.${{ matrix.machine }}.config.system.build.toplevel
