--- a/.github/workflows/configs.yml
+++ b/.github/workflows/configs.yml
@@ -20,6 +20,7 @@ jobs:
       uses: cachix/install-nix-action@v12
       with:
         install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-3.0pre20200820_4d77513/install
+        nix_path: nixpkgs=channel:nixos-unstable
         extra_nix_config: |
           experimental-features = nix-command flakes
     - name: Build system config
