--- a/.github/workflows/configs.yml
+++ b/.github/workflows/configs.yml
@@ -23,5 +23,10 @@ jobs:
         nix_path: nixpkgs=channel:nixos-unstable
         extra_nix_config: |
           experimental-features = nix-command flakes
+    - name: Install cachix
+      uses: cachix/cachix-action@v8
+      with:
+        name: nix-cfg
+        authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
     - name: Build system config
       run: nix build .#nixosConfigurations.${{ matrix.machine }}.config.system.build.toplevel
