--- a/config/sway/config
+++ b/config/sway/config
@@ -148,13 +148,6 @@ mode "resize" {
   bindsym Escape mode "default"
 }
 
-# Status Bar:
-# Read `man 5 sway-bar` for more information about this section.
-
-set $foreground #D8DEE9
-set $background #2E3440
-set $lighterbg  #4C566A
-
 bar {
   position bottom
   # When the status_command prints a new line to stdout, swaybar updates.
@@ -173,12 +166,11 @@ bar {
   }
 }
 
-# Color settings: old: focused: #f993f6 inactive: #93c3f9
-# class                 border  backgr  text    indicator child_border
-client.focused          #6f757d #6f757d #282A36 #6f757d   #6f757d
-client.focused_inactive #44475A #44475A #282A36 #44475A   #44475A
-client.unfocused        #44475A #44475A #F8F8F2 #44475A   #44475A
-client.urgent           #FF5555 #FF5555 #282A36 #FF5555   #FF5555
-client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A3
-
 default_border pixel 2
+
+# class                 border        backgr        text        indicator       child_border
+client.focused          $focusedback  $focusedback  $foreground $focusedback    $focusedback
+client.focused_inactive $inactiveback $inactiveback $foreground $inactiveback   $inactiveback
+client.unfocused        $inactiveback $inactiveback $urgenttext $inactiveback   $inactiveback
+client.urgent           $urgent       $urgent       $foreground $urgent         $urgent
+client.placeholder      $pholdback    $pholdback    $urgenttext $pholdback      $pholdback
