--- a/config/sway/config
+++ b/config/sway/config
@@ -67,6 +67,7 @@ bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
+
 # Move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number 1
 bindsym $mod+Shift+2 move container to workspace number 2
@@ -84,6 +85,11 @@ bindsym $mod+Shift+0 move container to workspace number 10
 # respectively.
 bindsym $mod+b splith
 bindsym $mod+v splitv
+
+# Play and pause
+bindsym XF86AudioPrev exec 'mpc prev'
+bindsym XF86AudioPlay exec 'mpc toggle'
+bindsym XF86AudioNext exec 'mpc next'
 
 # Switch the current container between different layout styles
 bindsym $mod+s layout stacking
