Add documentation for hashes

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -6,5 +6,6 @@
     "update.mode": "none",
     "editor.scrollbar.horizontal": "hidden",
     "editor.scrollbar.vertical": "hidden",
-    "workbench.colorTheme": "Nord"
+    "workbench.colorTheme": "Nord",
+    "workbench.startupEditor": "newUntitledFile"
 }
