--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,6 +1,6 @@
 {
 	"layer": "top",
-	"modules-left": ["sway/workspaces", "mpd", "sway/mode"],
+	"modules-left": ["sway/workspaces", "sway/mode"],
 	"modules-center": [],
 	"modules-right": ["network", "pulseaudio", "temperature", "cpu", "memory", "battery", "clock"],
 	"mpd": {
