--- a/config/waybar/config
+++ b/config/waybar/config
@@ -16,8 +16,19 @@
 	"pulseaudio": {
 		"tooltip": false,
 		"scroll-step": 5,
-		"format": "{icon} {volume}%",
+		"format": "{icon} {format_source} {volume}%",
+        "format-bluetooth": "{icon} {format_source} {volume}% ",
+        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-muted": " {format_source}",
+        "format-source": " {volume}%",
+        "format-source-muted": "",
 		"format-icons": {
+            "headphones": "",
+            "handsfree": "",
+            "headset": "",
+            "phone": "",
+            "portable": "",
+            "car": "",
 			"default": ["奄", "奔", "墳"]
 		}
 	},
