add more vscode settings

--- a/config/vscode/settings.json
+++ b/config/vscode/settings.json
@@ -8,4 +8,29 @@
     "editor.scrollbar.vertical": "hidden",
     "workbench.colorTheme": "Nord",
     "workbench.startupEditor": "newUntitledFile"
+
+    "editor.tabSize": 4,
+    "editor.formatOnSave": true,
+    "editor.autoIndent": "full",
+    "editor.quickSuggestions": true,
+    "editor.mouseWheelZoom": true,
+    "editor.semanticHighlighting.enabled": true,
+    "editor.fontLigatures": true,
+    "editor.wordBasedSuggestions": true,
+    "editor.suggest.localityBonus": true,
+    "editor.snippetSuggestions": "bottom",
+    "editor.quickSuggestionsDelay": 0,
+    "files.exclude": {
+        "**/.git": true,
+        "**/.DS_Store": true
+    },
+    "editor.rulers": [
+        { "column": 80, "color": "#ffffff10" },
+        { "column": 120, "color": "#6666668e" }
+    ],
+    "editor.codeActionsOnSave": {
+        "source.fixAll": true
+    },
+    "prettier.tabWidth": 4,
+    "prettier.useTabs": true
 }
