dp2 is primary when plugged in

--- a/config/kanshi/config
+++ b/config/kanshi/config
@@ -1,6 +1,7 @@
 profile workdesk {
-  output eDP-1 enable scale 2 mode 3840x2160 position 0,0 #
+  output eDP-1 enable scale 2 mode 3840x2160 position 0,0
   output DP-2 enable scale 1.5
+  exec swaymsg workspace 1, move workspace to DP-2
 }
 
 profile laptop {
