--- a/config/sway/config
+++ b/config/sway/config
@@ -12,20 +12,18 @@ set $menu launch
 output * bg #434C5E solid_color
 
 ### Input configuration
-input type:touchpad {
-  dwt enabled
-  tap enabled # enable tap to click for broken touchpad
-  drag enabled
-  tap_button_map lrm
-  middle_emulation enabled
-}
-
 input type:keyboard {
   repeat_delay 250
   repeat_rate 45
 }
 
 input type:touch {
+  dwt disabled
+  tap disabled
+  drag disabled
+}
+
+input type:touchpad {
   dwt disabled
   tap disabled
   drag disabled
