--- a/config/sway/config
+++ b/config/sway/config
@@ -106,6 +106,10 @@ bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
 
+# bind monitors to workspaces
+# assume $mon2 is configured
+workspace 10 output $mon2
+
 # You can "split" the current object of your focus with
 # $mod+b or $mod+v, for horizontal and vertical splits
 # respectively.
