--- a/config/sway/config
+++ b/config/sway/config
@@ -5,6 +5,7 @@ set $down j
 set $up k
 set $right l
 
+# TODO it's terrible that this is hardcoded
 set $term alacritty
 
 set $menu launch
@@ -25,21 +26,6 @@ input type:keyboard {
   repeat_rate 45
 }
 
-input type:touch {
-  dwt disabled
-  tap disabled
-  drag disabled
-  events disabled
-}
-
-
-input type:touchpad {
-  dwt disabled
-  tap disabled
-  drag disabled
-  events disabled
-}
-
 # Default laptop keyboard
 # (assume external keyboards are programmed with sanity)
 # Add an identifier for your default keyboard name
@@ -47,6 +33,7 @@ input type:touchpad {
 input "1:1:AT_Translated_Set_2_keyboard" {
   xkb_options caps:swapescape
 }
+
 
 # Anne Pro 2 keyboard
 input "1241:41618:OBINS_OBINS_AnnePro2" {
