--- a/config/sway/config
+++ b/config/sway/config
@@ -26,20 +26,16 @@ input type:keyboard {
   repeat_rate 45
 }
 
-# Default laptop keyboard
-# (assume external keyboards are programmed with sanity)
-# Add an identifier for your default keyboard name
-# Caps lock is in the wrong place > : (
+# Swap `CapsLock` for `Escape` on default laptop keyboards
+
+# Common name for default laptop keyboard
 input "1:1:AT_Translated_Set_2_keyboard" {
   xkb_options caps:swapescape
 }
-
-
 # Anne Pro 2 keyboard
 input "1241:41618:OBINS_OBINS_AnnePro2" {
   xkb_options caps:swapescape
 }
-
 input "1121:16:NOVATEK_USB_Keyboard" {
   xkb_options caps:swapescape
 }
@@ -93,25 +89,18 @@ bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
 
-# bind monitors to workspaces
-# assume $mon2 is configured
+# bind monitors to workspaces; ASSUME $mon2 is configured
 workspace 10 output $mon2
-
-# You can "split" the current object of your focus with
-# $mod+b or $mod+v, for horizontal and vertical splits
-# respectively.
-bindsym $mod+b splith
-bindsym $mod+v splitv
 
 # Play and pause
 bindsym XF86AudioPrev exec 'mpc prev'
 bindsym XF86AudioPlay exec 'mpc toggle'
 bindsym XF86AudioNext exec 'mpc next'
 
-# Switch the current container between different layout styles
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# Switch the current container between different layout styles:
+bindsym $mod+s layout stacking     # open windows on top of one another
+bindsym $mod+w layout tabbed       # open windows "next to" one another
+bindsym $mod+e layout toggle split # back to default
 
 # Make the current focus fullscreen
 bindsym $mod+f fullscreen
@@ -125,26 +114,16 @@ bindsym $mod+tab focus mode_toggle
 # Move focus to the parent container
 bindsym $mod+a focus parent
 
-# Scratchpad:
-# Sway has a "scratchpad", which is a bag of holding for windows.
-# You can send windows there and get them back later.
-# Move the currently focused window to the scratchpad
+# Scratchpad
 bindsym $mod+Shift+minus move scratchpad
-
-# Show the next scratchpad window or hide the focused scratchpad window.
-# If there are multiple scratchpad windows, this command cycles through them.
 bindsym $mod+minus scratchpad show
 
 # Brightness
 bindsym XF86MonBrightnessUp exec "light -A 10"
 bindsym XF86MonBrightnessDown exec "light -U 10"
 
-# Volume
-bindsym XF86AudioRaiseVolume exec 'pactl set-sink-volume @DEFAULT_SINK@ +5%'
-bindsym XF86AudioLowerVolume exec 'pactl set-sink-volume @DEFAULT_SINK@ -5%'
-bindsym XF86AudioMute exec 'pactl set-sink-mute @DEFAULT_SINK@ toggle'
-
 bindsym $mod+r mode "resize"
+
 mode "resize" {
   bindsym $left resize shrink width 10px
   bindsym $down resize grow height 10px
