--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -2,4 +2,4 @@ format = """$character"""
 right_format = """$all""" 
 
 [nix_shell]
-format = 'via [$symbol\($name\)]($style) '
+format = 'via [$symbol$name]($style) '
