--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -1,5 +1,6 @@
-format = """$character""" 
-right_format = """$all""" 
+format = """$character"""
+right_format = """$all"""
+add_newline = false
 
 [nix_shell]
 format = 'via [$symbol$name]($style) '
