--- a/config/waybar/config
+++ b/config/waybar/config
@@ -1,9 +1,9 @@
 {
     "layer": "top",
         "output": ["eDP-1"],
-        "modules-left": ["battery", "sway/mode"],
-        "modules-center": ["sway/workspaces"],
-        "modules-right": ["pulseaudio", "network", "clock"],
+        "modules-left": ["sway/workspaces", "sway/mode"],
+        "modules-center": ["network"],
+        "modules-right": ["pulseaudio", "battery", "clock"],
         "sway/workspaces": {
             "disable-scroll": true
         },
