--- a/config/sway/config
+++ b/config/sway/config
@@ -90,9 +90,9 @@ bindsym $mod+Shift+0 move container to workspace number 10
 workspace 10 output $mon2
 
 # Play and pause
-bindsym XF86AudioPrev exec 'mpc prev'
-bindsym XF86AudioPlay exec 'mpc toggle'
-bindsym XF86AudioNext exec 'mpc next'
+bindsym XF86AudioPrev exec 'playerctl previous'
+bindsym XF86AudioPlay exec 'playerctl play-pause'
+bindsym XF86AudioNext exec 'playerctl next'
 
 # Switch the current container between different layout styles:
 bindsym $mod+s layout stacking     # open windows on top of one another
